--- a/articles/templates/articles/articleslist.html
+++ b/articles/templates/articles/articleslist.html
@@ -7,15 +7,16 @@
     <link rel="stylesheet" href="{% static 'styles.css' %}">
 </head>
 <body>
-<h1>Articles List</h1>
-{% for article in articles %}
-    <h2>
-     <a href="">{{ article.title }}</a>
-    </h2>
-    <p>{{ article.snippet }}</p>
+<div class="container">
+    <h1>Articles List</h1>
+    {% for article in articles %}
+        <h2>
+         <a href="">{{ article.title }}</a>
+        </h2>
+        <p>{{ article.snippet }}</p>
 
-    <p>{{ article.date }}</p>
-{% endfor %}
-
+        <p>{{ article.date }}</p>
+    {% endfor %}
+<div>
 </body>
 </html>
