--- a/articles/templates/articles/articleslist.html
+++ b/articles/templates/articles/articleslist.html
@@ -6,17 +6,15 @@
     <title>articles</title>
     <link rel="stylesheet" href="{% static 'styles.css' %}">
 </head>
-<body>
 <div class="container">
     <h1>Articles List</h1>
     {% for article in articles %}
         <h2>
-         <a href="">{{ article.title }}</a>
+            <a href="">{{ article.title }}</a>
         </h2>
         <p>{{ article.snippet }}</p>
 
         <p>{{ article.date }}</p>
     {% endfor %}
-<div>
-</body>
+    </div>
 </html>
