--- a/articles/templates/articles/articleslist.html
+++ b/articles/templates/articles/articleslist.html
@@ -1,20 +1,21 @@
-{% load static %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>articles</title>
-    <link rel="stylesheet" href="{% static 'styles.css' %}">
-</head>
+{% extends 'base.html' %}
+
+{% block title %}
+    articles
+{% endblock %}
+{% block content %}
+    <h1>
+    <a href="{% url 'articles:list' %} ">Article lists</a>
+    </h1>
 <div class="container">
-    <h1>Articles List</h1>
+
     {% for article in articles %}
         <h2>
-            <a href="">{{ article.title }}</a>
+            <a href="{% url 'articles:detail' slug=article.slug %}">{{ article.title }}</a>
         </h2>
-        <p>{{ article.snippet }}</p>
+        <p>{{ article.snippet }} </p>
 
-        <p>{{ article.date }}</p>
+        <h4>{{ article.date }}</h4>
     {% endfor %}
-    </div>
-</html>
+</div>
+{% endblock %}
