--- a/assets/styles.css
+++ b/assets/styles.css
@@ -1,3 +1,23 @@
 body {
     background-color: antiquewhite ;
+    background-image: url(start.jpg);
+    background-repeat-y:no-repeat;
+    background-attachment:fixed;
+    color: antiquewhite;
+}
+
+body* {
+    font-family: auto, serif;
+}
+h2,h3,h4,h5{
+    font-weight:normal;
+
+}
+p{
+    margin:auto;
+}
+
+a,a:hover,visited{
+    color:antiquewhite;
+    text-decoration:none;
 }
