--- a/templates/Home.html
+++ b/templates/Home.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>about</title>
+    <title>Home</title>
 </head>
 <body>
 <h1>Home</h1>
